--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "767c156c",
    "metadata": {},
    "outputs": [
@@ -28,7 +28,7 @@
        "True"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "703152d9",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "5fc2f7e0",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "2c1c9447",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "247f9f86",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "63881094",
    "metadata": {},
    "outputs": [],
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d462c868",
    "metadata": {},
    "outputs": [],
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "2ec0d77e",
    "metadata": {},
    "outputs": [],
@@ -236,10 +236,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "f453bac2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "   count()\n",
+      "0        0\n",
+      "   count()\n",
+      "0        0\n"
+     ]
+    }
+   ],
    "source": [
     "# ---------------------------\n",
     "# Query ClickHouse for data\n",
@@ -260,7 +274,225 @@
     "\"\"\"\n",
     "\n",
     "params = {\"function_name\": FUNCTION_NAME, \"max_samples\": MAX_SAMPLES}\n",
-    "df = clickhouse_client.query_df(query, params)"
+    "df = clickhouse_client.query_df(query, params)\n",
+    "df.head()\n",
+    "#------------------------\n",
+    "\n",
+    "query1 = f\"\"\"\n",
+    "SELECT DISTINCT function_name\n",
+    "FROM {inference_table_name}\n",
+    "LIMIT 10\n",
+    "\"\"\"\n",
+    "df_debug = clickhouse_client.query_df(query1)\n",
+    "print(df_debug)\n",
+    "\n",
+    "tables = clickhouse_client.query_df(\"SHOW TABLES\")\n",
+    "#print(tables)\n",
+    "#print(clickhouse_client.query_df(\"DESCRIBE TABLE JsonInference\"))\n",
+    "\n",
+    "#print(clickhouse_client.query_df(\"SELECT * FROM JsonInference LIMIT 5\"))\n",
+    "\n",
+    "print(clickhouse_client.query_df(\"SELECT count() FROM JsonInference\"))\n",
+    "print(clickhouse_client.query_df(\"SELECT count() FROM ModelInference\"))\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62d65aba",
+   "metadata": {},
+   "source": [
+    "render message\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a7154792",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Cannot set a DataFrame without columns to the column openai_messages",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
+      "\u001b[32m/var/folders/b2/dwp9ltkx1q1_p3ns9dqhs_lh0000gn/T/ipykernel_59743/203560917.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m()\u001b[39m\n\u001b[32m    157\u001b[39m \n\u001b[32m    158\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m result\n\u001b[32m    159\u001b[39m \n\u001b[32m    160\u001b[39m \n\u001b[32m--> \u001b[39m\u001b[32m161\u001b[39m df[\u001b[33m\"openai_messages\"\u001b[39m] = df.apply(sample_to_openai_messages, axis=\u001b[32m1\u001b[39m)\n\u001b[32m    162\u001b[39m \n\u001b[32m    163\u001b[39m \u001b[38;5;66;03m# Drop null rows\u001b[39;00m\n\u001b[32m    164\u001b[39m df = df[df[\u001b[33m\"openai_messages\"\u001b[39m].notna()]\n",
+      "\u001b[32m~/Desktop/CodeDay2025/tensorzero/.venv/lib/python3.13/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, key, value)\u001b[39m\n\u001b[32m   4297\u001b[39m             self._setitem_frame(key, value)\n\u001b[32m   4298\u001b[39m         \u001b[38;5;28;01melif\u001b[39;00m isinstance(key, (Series, np.ndarray, list, Index)):\n\u001b[32m   4299\u001b[39m             self._setitem_array(key, value)\n\u001b[32m   4300\u001b[39m         \u001b[38;5;28;01melif\u001b[39;00m isinstance(value, DataFrame):\n\u001b[32m-> \u001b[39m\u001b[32m4301\u001b[39m             self._set_item_frame_value(key, value)\n\u001b[32m   4302\u001b[39m         elif (\n\u001b[32m   4303\u001b[39m             is_list_like(value)\n\u001b[32m   4304\u001b[39m             \u001b[38;5;28;01mand\u001b[39;00m \u001b[38;5;28;01mnot\u001b[39;00m self.columns.is_unique\n",
+      "\u001b[32m~/Desktop/CodeDay2025/tensorzero/.venv/lib/python3.13/site-packages/pandas/core/frame.py\u001b[39m in \u001b[36m?\u001b[39m\u001b[34m(self, key, value)\u001b[39m\n\u001b[32m   4460\u001b[39m                 \u001b[33m\"Cannot set a DataFrame with multiple columns to the single \"\u001b[39m\n\u001b[32m   4461\u001b[39m                 f\"column {key}\"\n\u001b[32m   4462\u001b[39m             )\n\u001b[32m   4463\u001b[39m         \u001b[38;5;28;01melif\u001b[39;00m len(value.columns) == \u001b[32m0\u001b[39m:\n\u001b[32m-> \u001b[39m\u001b[32m4464\u001b[39m             raise ValueError(\n\u001b[32m   4465\u001b[39m                 f\"Cannot set a DataFrame without columns to the column {key}\"\n\u001b[32m   4466\u001b[39m             )\n\u001b[32m   4467\u001b[39m \n",
+      "\u001b[31mValueError\u001b[39m: Cannot set a DataFrame without columns to the column openai_messages"
+     ]
+    }
+   ],
+   "source": [
+    "def render_message(message: Dict[str, Any]) -> Optional[List[Dict[str, Any]]]:\n",
+    "    role = message[\"role\"]\n",
+    "    assert role in [\"user\", \"assistant\"], f\"Invalid role: {role}\"\n",
+    "    content: List[Dict[str, Any]] = []\n",
+    "    tool_calls: List[Dict[str, Any]] = []\n",
+    "    rendered_messages: List[Dict[str, Any]] = []\n",
+    "\n",
+    "    for content_block in message[\"content\"]:\n",
+    "        if content_block[\"type\"] == \"text\":\n",
+    "            parsed_content = content_block[\"value\"]\n",
+    "            if not isinstance(parsed_content, str):\n",
+    "                parsed_content = env.render_template(role, **parsed_content)\n",
+    "            content.append({\"type\": \"text\", \"text\": parsed_content})\n",
+    "        elif content_block[\"type\"] == \"raw_text\":\n",
+    "            content.append({\"type\": \"text\", \"text\": content_block[\"value\"]})\n",
+    "        elif content_block[\"type\"] == \"thought\":\n",
+    "            content.append(\n",
+    "                {\"type\": \"text\", \"text\": f\"<think>{content_block['text']}</think>\"}\n",
+    "            )\n",
+    "        elif content_block[\"type\"] == \"tool_call\" and role == \"assistant\":\n",
+    "            tool_calls.append(\n",
+    "                {\n",
+    "                    \"function\": {\n",
+    "                        \"arguments\": json.dumps(content_block[\"arguments\"]),\n",
+    "                        \"name\": content_block[\"name\"],\n",
+    "                    },\n",
+    "                    \"id\": content_block[\"id\"],\n",
+    "                    \"type\": \"function\",\n",
+    "                }\n",
+    "            )\n",
+    "        elif content_block[\"type\"] == \"tool_result\" and role == \"user\":\n",
+    "            # Tool results get priority so that they follow the tool call in the conversation.\n",
+    "            # Any other \"user\" content will be appended in another message below.\n",
+    "            rendered_messages.append(\n",
+    "                {\n",
+    "                    \"role\": \"tool\",\n",
+    "                    \"tool_call_id\": content_block[\"id\"],\n",
+    "                    \"content\": content_block[\"result\"],\n",
+    "                }\n",
+    "            )\n",
+    "        else:\n",
+    "            warnings.warn(\n",
+    "                f\"We do not support content block type: {content_block['type']}, dropping example.\",\n",
+    "                UserWarning,\n",
+    "            )\n",
+    "            return None\n",
+    "\n",
+    "    if content or tool_calls:\n",
+    "        role_message: Dict[str, Any] = {\"role\": role}\n",
+    "        if content:\n",
+    "            role_message[\"content\"] = content\n",
+    "        if tool_calls:\n",
+    "            role_message[\"tool_calls\"] = tool_calls\n",
+    "        rendered_messages.append(role_message)\n",
+    "\n",
+    "    return rendered_messages\n",
+    "\n",
+    "\n",
+    "def render_output(\n",
+    "    output: List[Dict[str, Any]],\n",
+    ") -> Dict[str, Any]:\n",
+    "    \"\"\"\n",
+    "    Parses the assistant message from an observation using the provided function configuration.\n",
+    "    \"\"\"\n",
+    "    content: List[Dict[str, Any]] = []\n",
+    "    tool_calls: List[Dict[str, Any]] = []\n",
+    "\n",
+    "    if function_type == \"json\":\n",
+    "        return {\"role\": \"assistant\", \"content\": output[\"raw\"]}\n",
+    "    elif function_type == \"chat\":\n",
+    "        for content_block in output:\n",
+    "            if content_block[\"type\"] == \"text\":\n",
+    "                content.append({\"type\": \"text\", \"text\": content_block[\"text\"]})\n",
+    "            elif content_block[\"type\"] == \"thought\":\n",
+    "                content.append(\n",
+    "                    {\"type\": \"text\", \"text\": f\"<think>{content_block['text']}</think>\"}\n",
+    "                )\n",
+    "            elif content_block[\"type\"] == \"tool_call\":\n",
+    "                tool_calls.append(\n",
+    "                    {\n",
+    "                        \"function\": {\n",
+    "                            \"arguments\": json.dumps(content_block[\"arguments\"]),\n",
+    "                            \"name\": content_block[\"name\"],\n",
+    "                        },\n",
+    "                        \"id\": content_block[\"id\"],\n",
+    "                        \"type\": \"function\",\n",
+    "                    }\n",
+    "                )\n",
+    "            else:\n",
+    "                warnings.warn(\n",
+    "                    f\"We do not support content block type: {content_block['type']}, dropping example.\",\n",
+    "                    UserWarning,\n",
+    "                )\n",
+    "                return None\n",
+    "    else:\n",
+    "        raise ValueError(f\"Unsupported function type: {function_type}\")\n",
+    "\n",
+    "    # Once we finish collecting all blocks, create one assistant message.\n",
+    "    output_message: Dict[str, Any] = {\"role\": \"assistant\"}\n",
+    "    if content:\n",
+    "        output_message[\"content\"] = content\n",
+    "    if tool_calls:\n",
+    "        output_message[\"tool_calls\"] = tool_calls\n",
+    "\n",
+    "    return output_message\n",
+    "\n",
+    "\n",
+    "def sample_to_openai_messages(sample) -> List[Dict[str, str]]:\n",
+    "    function_input = json.loads(sample[\"input\"])\n",
+    "\n",
+    "    result = {\n",
+    "        \"input\": {\"messages\": [], \"tools\": [], \"parallel_tool_calls\": True},\n",
+    "        \"preferred_output\": [],\n",
+    "        \"non_preferred_output\": [],\n",
+    "    }\n",
+    "\n",
+    "    # Add the system message to the rendered messages\n",
+    "    # If there is data passed in or a system template there must be a system message\n",
+    "    system = function_input.get(\"system\", {})\n",
+    "    if len(system) > 0 or system_template_path:\n",
+    "        if system_template_path:\n",
+    "            system_message = env.render_template(\"system\", **system)\n",
+    "            result[\"input\"][\"messages\"].append(\n",
+    "                {\"role\": \"system\", \"content\": system_message}\n",
+    "            )\n",
+    "        else:\n",
+    "            result[\"input\"][\"messages\"].append(\n",
+    "                {\"role\": \"system\", \"content\": system_message}\n",
+    "            )\n",
+    "\n",
+    "    # Add the input messages to the rendered messages\n",
+    "    for message in function_input[\"messages\"]:\n",
+    "        rendered_message = render_message(message)\n",
+    "        if rendered_message is None:\n",
+    "            # `render_message` will return None if the message contains an unknown or unsupported content block.\n",
+    "            # The entire example is dropped if this is the case.\n",
+    "            return None\n",
+    "        result[\"input\"][\"messages\"].extend(render_message(message))\n",
+    "\n",
+    "    # Add the demonstration (preferred output)\n",
+    "    preferred_output = json.loads(sample[\"preferred_output\"])\n",
+    "    rendered_preferred_output = render_output(preferred_output)\n",
+    "    if rendered_preferred_output is None:\n",
+    "        # `render_output` will return None if the output contains an unknown or unsupported content block.\n",
+    "        # The entire example is dropped if this is the case.\n",
+    "        return None\n",
+    "    result[\"preferred_output\"].append(rendered_preferred_output)\n",
+    "\n",
+    "    # Add the inference output (non-preferred output)\n",
+    "    non_preferred_output = json.loads(sample[\"non_preferred_output\"])\n",
+    "    rendered_non_preferred_output = render_output(non_preferred_output)\n",
+    "    if rendered_non_preferred_output is None:\n",
+    "        # `render_output` will return None if the output contains an unknown or unsupported content block.\n",
+    "        # The entire example is dropped if this is the case.\n",
+    "        return None\n",
+    "    result[\"non_preferred_output\"].append(rendered_non_preferred_output)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "df[\"openai_messages\"] = df.apply(sample_to_openai_messages, axis=1)\n",
+    "\n",
+    "# Drop null rows\n",
+    "df = df[df[\"openai_messages\"].notna()]\n",
+    "\n",
+    "df.head()\n"
    ]
   },
   {
@@ -290,7 +522,7 @@
     "    except:\n",
     "        continue\n",
     "\n",
-    "dpo_dataset = [format_dpo(r) for r in dpo_rows]"
+    "dpo_dataset = [format_dpo(r) for r in dpo_rows]\n"
    ]
   },
   {
