--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "id": "f453bac2",
    "metadata": {},
    "outputs": [
@@ -247,6 +247,58 @@
       "Empty DataFrame\n",
       "Columns: []\n",
       "Index: []\n",
+      "                                        name\n",
+      "0                       BatchIdByInferenceId\n",
+      "1                   BatchIdByInferenceIdView\n",
+      "2                        BatchModelInference\n",
+      "3                               BatchRequest\n",
+      "4                      BooleanMetricFeedback\n",
+      "5            BooleanMetricFeedbackByTargetId\n",
+      "6        BooleanMetricFeedbackByTargetIdView\n",
+      "7               BooleanMetricFeedbackTagView\n",
+      "8                              ChatInference\n",
+      "9               ChatInferenceByEpisodeIdView\n",
+      "10                     ChatInferenceByIdView\n",
+      "11                    ChatInferenceDatapoint\n",
+      "12                      ChatInferenceTagView\n",
+      "13                           CommentFeedback\n",
+      "14                 CommentFeedbackByTargetId\n",
+      "15             CommentFeedbackByTargetIdView\n",
+      "16                    CommentFeedbackTagView\n",
+      "17                     DemonstrationFeedback\n",
+      "18        DemonstrationFeedbackByInferenceId\n",
+      "19    DemonstrationFeedbackByInferenceIdView\n",
+      "20              DemonstrationFeedbackTagView\n",
+      "21                              DeploymentID\n",
+      "22                      DynamicEvaluationRun\n",
+      "23         DynamicEvaluationRunByProjectName\n",
+      "24     DynamicEvaluationRunByProjectNameView\n",
+      "25               DynamicEvaluationRunEpisode\n",
+      "26        DynamicEvaluationRunEpisodeByRunId\n",
+      "27    DynamicEvaluationRunEpisodeByRunIdView\n",
+      "28           DynamicInContextLearningExample\n",
+      "29                               FeedbackTag\n",
+      "30                       FloatMetricFeedback\n",
+      "31             FloatMetricFeedbackByTargetId\n",
+      "32         FloatMetricFeedbackByTargetIdView\n",
+      "33                FloatMetricFeedbackTagView\n",
+      "34                      InferenceByEpisodeId\n",
+      "35                             InferenceById\n",
+      "36                              InferenceTag\n",
+      "37                             JsonInference\n",
+      "38              JsonInferenceByEpisodeIdView\n",
+      "39                     JsonInferenceByIdView\n",
+      "40                    JsonInferenceDatapoint\n",
+      "41                      JsonInferenceTagView\n",
+      "42                            ModelInference\n",
+      "43                       ModelInferenceCache\n",
+      "44  StaticEvaluationBooleanHumanFeedbackView\n",
+      "45    StaticEvaluationFloatHumanFeedbackView\n",
+      "46             StaticEvaluationHumanFeedback\n",
+      "47                      TagChatInferenceView\n",
+      "48                              TagInference\n",
+      "49                      TagJsonInferenceView\n",
+      "50                       TensorZeroMigration\n",
       "   count()\n",
       "0        0\n",
       "   count()\n",
@@ -287,7 +339,7 @@
     "print(df_debug)\n",
     "\n",
     "tables = clickhouse_client.query_df(\"SHOW TABLES\")\n",
-    "#print(tables)\n",
+    "print(tables)\n",
     "#print(clickhouse_client.query_df(\"DESCRIBE TABLE JsonInference\"))\n",
     "\n",
     "#print(clickhouse_client.query_df(\"SELECT * FROM JsonInference LIMIT 5\"))\n",
