add tools to messages if they exist

--- a/recipes/supervised_fine_tuning/demonstrations/unsloth/unsloth.ipynb
+++ b/recipes/supervised_fine_tuning/demonstrations/unsloth/unsloth.ipynb
@@ -369,6 +369,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def tensorzero_to_chatml_tools(tools: Optional[List[Any]]) -> List[Dict[str, Any]]:\n",
+    "    \"\"\"Convert TensorZero tools to OpenAI format.\"\"\"\n",
+    "    chatml_tools: List[Dict[str, Any]] = []\n",
+    "    if tools:\n",
+    "        for tool in tools:\n",
+    "            chatml_tools.append(\n",
+    "                {\n",
+    "                    \"type\": \"function\",\n",
+    "                    \"function\": {\n",
+    "                        \"name\": tool.name,\n",
+    "                        \"description\": tool.description,\n",
+    "                        \"parameters\": tool.parameters,\n",
+    "                    },\n",
+    "                }\n",
+    "            )\n",
+    "    return chatml_tools\n",
+    "\n",
+    "\n",
     "def message_to_chatml(message: OutputMessage) -> Optional[List[Dict[str, Any]]]:\n",
     "    chatml_messages: List[Dict[str, Any]] = []\n",
     "    assert message.role in [\"user\", \"assistant\"], f\"Invalid role: {message.role}\"\n",
@@ -467,9 +485,14 @@
     "    for message in model_input.messages:\n",
     "        messages.extend(message_to_chatml(message))\n",
     "    messages.append(output_to_chatml(rendered_inference.output))\n",
-    "    tokenized_messages = tokenizer.apply_chat_template(\n",
-    "        messages, tokenize=False, add_generation_prompt=False\n",
-    "    )\n",
+    "    # Add tools if available\n",
+    "    payload = {\"messages\": messages, \"tokenize\": False, \"add_generation_prompt\": False}\n",
+    "    if rendered_inference.tool_params:\n",
+    "        tools = tensorzero_to_chatml_tools(\n",
+    "            rendered_inference.tool_params.tools_available\n",
+    "        )\n",
+    "        payload[\"tools\"] = tools\n",
+    "    tokenized_messages = tokenizer.apply_chat_template(**payload)\n",
     "\n",
     "    # Drop conversations that have unknown content\n",
     "    if all(msg is not None for msg in messages):\n",
