--- a/recipes/supervised_fine_tuning/unsloth/unsloth.ipynb
+++ b/recipes/supervised_fine_tuning/unsloth/unsloth.ipynb
@@ -37,8 +37,13 @@
     "\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "\n",
+    "METRIC_NAME = \"exact_match\"\n",
+    "\n",
     "# The name of the variant to use to grab the templates used for fine-tuning\n",
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"  # It's OK that this variant uses a different model than the one we're fine-tuning\n",
+    "\n",
+    "# If the metric is a float metric, you can set the threshold to filter the data\n",
+    "FLOAT_METRIC_THRESHOLD = 0.5\n",
     "\n",
     "# Fraction of the data to use for validation\n",
     "VAL_FRACTION = 0.2\n",
@@ -171,7 +176,6 @@
     "import subprocess\n",
     "import tempfile\n",
     "import warnings\n",
-    "from pathlib import Path\n",
     "from typing import Any, Dict, List, Optional\n",
     "\n",
     "import numpy as np\n",
@@ -180,6 +184,7 @@
     "from datasets import Dataset\n",
     "from tensorzero import (\n",
     "    ContentBlock,\n",
+    "    FloatMetricFilter,\n",
     "    RawText,\n",
     "    TensorZeroGateway,\n",
     "    Text,\n",
@@ -193,66 +198,6 @@
     "from trl import SFTTrainer\n",
     "from unsloth import FastLanguageModel, is_bfloat16_supported\n",
     "from unsloth.chat_templates import get_chat_template"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "TENSORZERO_GATEWAY_URL = \"http://localhost:3000\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Load the TensorZero configuration file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config_path = Path(CONFIG_PATH)\n",
-    "\n",
-    "assert config_path.exists(), f\"{CONFIG_PATH} does not exist\"\n",
-    "assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
-    "\n",
-    "with config_path.open(\"r\") as f:\n",
-    "    config = toml.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Retrieve the configuration for the variant with the templates we'll use for fine-tuning.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert \"functions\" in config, \"No `[functions]` section found in config\"\n",
-    "assert FUNCTION_NAME in config[\"functions\"], (\n",
-    "    f\"No function named `{FUNCTION_NAME}` found in config\"\n",
-    ")\n",
-    "assert \"variants\" in config[\"functions\"][FUNCTION_NAME], (\n",
-    "    f\"No variants section found for function `{FUNCTION_NAME}`\"\n",
-    ")\n",
-    "assert TEMPLATE_VARIANT_NAME in config[\"functions\"][FUNCTION_NAME][\"variants\"], (\n",
-    "    f\"No variant named `{TEMPLATE_VARIANT_NAME}` found in function `{FUNCTION_NAME}`\"\n",
-    ")\n",
-    "\n",
-    "variant = config[\"functions\"][FUNCTION_NAME][\"variants\"][TEMPLATE_VARIANT_NAME]\n",
-    "\n",
-    "variant"
    ]
   },
   {
@@ -279,6 +224,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Set the metric filter as needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "comparison_operator = \">=\"\n",
+    "metric_node = FloatMetricFilter(\n",
+    "    metric_name=METRIC_NAME,\n",
+    "    value=FLOAT_METRIC_THRESHOLD,\n",
+    "    comparison_operator=comparison_operator,\n",
+    ")\n",
+    "# metric_node = BooleanMetricFilter(\n",
+    "#     metric_name=METRIC_NAME,\n",
+    "#     value=True  # or False\n",
+    "# )\n",
+    "\n",
+    "metric_node"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Query the inferences and feedback from ClickHouse."
    ]
   },
@@ -291,7 +263,8 @@
     "stored_inferences = tensorzero_client.experimental_list_inferences(\n",
     "    function_name=FUNCTION_NAME,\n",
     "    variant_name=None,\n",
-    "    output_source=\"demonstration\",\n",
+    "    output_source=\"inference\",  # could also be \"demonstration\"\n",
+    "    filters=metric_node,\n",
     "    limit=MAX_SAMPLES,\n",
     ")"
    ]
@@ -770,6 +743,19 @@
    "metadata": {},
    "source": [
     "Finally, add a new variant to your function to use the fine-tuned model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = tensorzero_client.experimental_get_config()\n",
+    "\n",
+    "variant = config[\"functions\"][FUNCTION_NAME][\"variants\"][TEMPLATE_VARIANT_NAME]\n",
+    "\n",
+    "variant"
    ]
   },
   {
