--- a/recipes/supervised_fine_tuning/unsloth/unsloth.ipynb
+++ b/recipes/supervised_fine_tuning/unsloth/unsloth.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "FUNCTION_NAME = \"extract_entities\"\n",
     "\n",
-    "METRIC_NAME = \"exact_match\"\n",
+    "METRIC_NAME = \"jaccard_similarity\"\n",
     "\n",
     "# The name of the variant to use to grab the templates used for fine-tuning\n",
     "TEMPLATE_VARIANT_NAME = \"gpt_4o_mini\"  # It's OK that this variant uses a different model than the one we're fine-tuning\n",
@@ -459,7 +459,11 @@
     "        messages.extend(message_to_chatml(message))\n",
     "    messages.append(output_to_chatml(rendered_inference.output))\n",
     "    # Add tools if available\n",
-    "    payload = {\"messages\": messages, \"tokenize\": False, \"add_generation_prompt\": False}\n",
+    "    payload = {\n",
+    "        \"conversation\": messages,\n",
+    "        \"tokenize\": False,\n",
+    "        \"add_generation_prompt\": False,\n",
+    "    }\n",
     "    if rendered_inference.tool_params:\n",
     "        tools = tensorzero_to_chatml_tools(\n",
     "            rendered_inference.tool_params.tools_available\n",
@@ -715,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once the model is deployed, you can add the fine-tuned model to your config file."
+    "Once the model is deployed, you can add the fine-tuned model and a new variant to your config file."
    ]
   },
   {
@@ -736,57 +740,6 @@
     "}\n",
     "\n",
     "print(toml.dumps(model_config))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Finally, add a new variant to your function to use the fine-tuned model."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "config = tensorzero_client.experimental_get_config()\n",
-    "\n",
-    "variant = config[\"functions\"][FUNCTION_NAME][\"variants\"][TEMPLATE_VARIANT_NAME]\n",
-    "\n",
-    "variant"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "variant_config = {\n",
-    "    \"type\": \"chat_completion\",\n",
-    "    \"weight\": 0,\n",
-    "    \"model\": model_identifier,\n",
-    "}\n",
-    "\n",
-    "system_template = variant.get(\"system_template\")\n",
-    "if system_template:\n",
-    "    variant_config[\"system_template\"] = system_template\n",
-    "\n",
-    "user_template = variant.get(\"user_template\")\n",
-    "if user_template:\n",
-    "    variant_config[\"user_template\"] = user_template\n",
-    "\n",
-    "assistant_template = variant.get(\"assistant_template\")\n",
-    "if assistant_template:\n",
-    "    variant_config[\"assistant_template\"] = assistant_template\n",
-    "\n",
-    "full_variant_config = {\n",
-    "    \"functions\": {FUNCTION_NAME: {\"variants\": {model_identifier: variant_config}}}\n",
-    "}\n",
-    "\n",
-    "print(toml.dumps(full_variant_config))"
    ]
   },
   {
