--- a/recipes/supervised_fine_tuning/demonstrations/unsloth/unsloth.ipynb
+++ b/recipes/supervised_fine_tuning/demonstrations/unsloth/unsloth.ipynb
@@ -486,7 +486,11 @@
     "        messages.extend(message_to_chatml(message))\n",
     "    messages.append(output_to_chatml(rendered_inference.output))\n",
     "    # Add tools if available\n",
-    "    payload = {\"messages\": messages, \"tokenize\": False, \"add_generation_prompt\": False}\n",
+    "    payload = {\n",
+    "        \"conversation\": messages,\n",
+    "        \"tokenize\": False,\n",
+    "        \"add_generation_prompt\": False,\n",
+    "    }\n",
     "    if rendered_inference.tool_params:\n",
     "        tools = tensorzero_to_chatml_tools(\n",
     "            rendered_inference.tool_params.tools_available\n",
