Run pre-commit formatting fixes

--- a/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
+++ b/examples/data-extraction-ner-sft-dpo/ner-sft-dpo.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "767c156c",
    "metadata": {},
    "outputs": [],
@@ -36,13 +36,13 @@
     "\n",
     "import altair as alt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import openai\n",
+    "import pandas as pd\n",
     "import toml\n",
     "from clickhouse_connect import get_client\n",
-    "from tensorzero import AsyncTensorZeroGateway, InferenceResponse\n",
     "from IPython.display import clear_output\n",
     "from minijinja import Environment\n",
+    "from tensorzero import AsyncTensorZeroGateway, InferenceResponse\n",
     "from tqdm import tqdm\n",
     "from tqdm.asyncio import tqdm_asyncio"
    ]
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "22ddc355",
    "metadata": {},
    "outputs": [],
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "f9ffb7c2",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "81bf8ce0",
    "metadata": {},
    "outputs": [],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "ab6cb8bd",
    "metadata": {},
    "outputs": [],
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "94e096eb",
    "metadata": {},
    "outputs": [],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "a3eb8059",
    "metadata": {},
    "outputs": [],
@@ -225,6 +225,7 @@
     "    predicted: Dict[str, List[str]], ground_truth: Dict[str, List[str]]\n",
     ") -> bool:\n",
     "    return set(flatten_dict(predicted)) == set(flatten_dict(ground_truth))\n",
+    "\n",
     "\n",
     "# Jaccard similarity between the predicted and ground_truth entities\n",
     "# (a more lenient metric that gives partial credit for correct entities)\n",
@@ -249,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "c2f996a6",
    "metadata": {},
    "outputs": [],
@@ -339,7 +340,8 @@
     "VARIANTS_TO_EVALUATE = [\n",
     "    \"gpt_4o\",\n",
     "    \"gpt_4o_mini\",\n",
-    "    #\"gpt_4o_mini_fine_tuned\",\n",
+    "    \"gpt_4o_mini_sft_fine_tuned\",\n",
+    "    \"gpt_4o_mini_sft_dpo_fine_tuned\",\n",
     "]"
    ]
   },
@@ -404,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "ec425445",
    "metadata": {},
    "outputs": [],
@@ -509,7 +511,7 @@
     "assert config_path.is_file(), f\"{CONFIG_PATH} is not a file\"\n",
     "\n",
     "with config_path.open(\"r\") as f:\n",
-    "    config = toml.load(f)\n"
+    "    config = toml.load(f)"
    ]
   },
   {
@@ -522,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "2c1c9447",
    "metadata": {},
    "outputs": [],
@@ -546,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "247f9f86",
    "metadata": {},
    "outputs": [],
@@ -557,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "63881094",
    "metadata": {},
    "outputs": [],
@@ -592,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "id": "d462c868",
    "metadata": {},
    "outputs": [],
@@ -614,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "2ec0d77e",
    "metadata": {},
    "outputs": [],
@@ -643,7 +645,7 @@
     "# ---------------------------\n",
     "# Query ClickHouse for data\n",
     "# ---------------------------\n",
-    "query = f\"\"\"\n",
+    "query = \"\"\"\n",
     "SELECT\n",
     "    i.variant_name AS variant,\n",
     "    i.episode_id AS episode_id,\n",
@@ -844,7 +846,7 @@
     "# Drop null rows\n",
     "df = df[df[\"openai_messages\"].notna()]\n",
     "\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -857,20 +859,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": null,
    "id": "cf1208fb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training set size: 400\n",
-      "Validation set size: 100\n",
-      "Actual validation fraction: 0.20\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get unique episode_ids\n",
     "unique_episode_ids = df[\"episode_id\"].unique()\n",
@@ -928,8 +920,7 @@
     "openai_client = openai.OpenAI()\n",
     "\n",
     "dpo_fine_tuning_object_id = upload_dataset_to_openai(train_df, openai_client)\n",
-    "val_file_object_id = upload_dataset_to_openai(val_df, openai_client)\n",
-    "\n"
+    "val_file_object_id = upload_dataset_to_openai(val_df, openai_client)"
    ]
   },
   {
@@ -1058,8 +1049,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "pygments_lexer": "ipython3"
   }
  },
  "nbformat": 4,
